--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,21 +1,21 @@
 [versions]
-agp = "8.1.0"
-kotlin = "1.8.10"
-ksp = "1.8.10-1.0.9"
-compose-bom = "2023.06.01"
-lifecycle = "2.6.1"
-accompanist = "0.30.1"
-navigation = "2.6.0"
-compose-destination = "1.9.42-beta"
-libsu = "5.0.5"
-sheets-compose-dialogs = "1.2.0"
+agp = "8.5.0"
+kotlin = "1.9.22"
+ksp = "1.9.22-1.0.17"
+compose-bom = "2024.06.00"
+lifecycle = "2.8.3"
+accompanist = "0.35.0-alpha"
+navigation = "2.7.7"
+compose-destination = "1.10.0"
+libsu = "6.0.0"
+sheets-compose-dialogs = "1.2.1"
 markdown = "4.6.2"
-core-ktx = "1.9.0"
+core-ktx = "1.13.1"
 junit = "4.13.2"
-androidx-test-ext-junit = "1.1.5"
-espresso-core = "3.5.1"
-appcompat = "1.6.1"
-material = "1.9.0"
+androidx-test-ext-junit = "1.2.1"
+espresso-core = "3.6.1"
+appcompat = "1.7.0"
+material = "1.12.0"
 
 [plugins]
 agp-app = { id = "com.android.application", version.ref = "agp" }
@@ -26,7 +26,7 @@ lsplugin-apksign = { id = "org.lsposed.lsplugin.apksign", version = "1.1" }
 lsplugin-cmaker = { id = "org.lsposed.lsplugin.cmaker", version = "1.1" }
 
 [libraries]
-androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version = "1.7.1" }
+androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version = "1.9.0" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation" }
 
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
@@ -53,9 +53,9 @@ com-github-topjohnwu-libsu-nio = { group = "com.github.topjohnwu.libsu", name = 
 
 dev-rikka-rikkax-parcelablelist = { module = "dev.rikka.rikkax.parcelablelist:parcelablelist", version = "2.0.1" }
 
-io-coil-kt-coil-compose = { group = "io.coil-kt", name = "coil-compose", version = "2.3.0" }
+io-coil-kt-coil-compose = { group = "io.coil-kt", name = "coil-compose", version = "2.5.0" }
 
-kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version = "1.7.1" }
+kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version = "1.7.3" }
 
 me-zhanghai-android-appiconloader-coil = { group = "me.zhanghai.android.appiconloader", name = "appiconloader-coil", version = "1.5.0" }
 
@@ -74,4 +74,4 @@ espresso-core = { group = "androidx.test.espresso", name = "espresso-core", vers
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 timber = { group = "com.jakewharton.timber", name = "timber", version = "5.0.1" }
-devappx = { group = "io.github.afkt", name = "DevAppX", version = "2.4.3" }
+devappx = { group = "io.github.afkt", name = "DevAppX", version = "2.4.4" }
